--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -5,32 +5,23 @@ body{
     padding: 0!important;
 }
 
-.blue-container {
+body {
     margin: 0;
-    padding: 30px;
-    height: 96vh;
+    height: 100%;
+    min-height: 100%;
     width: 100%;
     background: radial-gradient(ellipse at bottom, hsl(231, 91%, 35%) 0%, hsl(230, 93%, 50%) 100%) fixed;
     color: hsla(137, 20%, 95%, 1);
 }
 
-.blue-container:after {
-    content: "";
-    position: absolute;
-    height: 2px;
-    width: 2px;
-    top: -2px;
-    left: 0;
-    background: white;
-}
-
 .blue-inner-container{
     padding: 10px;
-    margin: 0;
+    margin: 20px;
     border-radius: 5px;
     background: radial-gradient(ellipse at bottom, hsl(230, 10%, 88%) 0%, hsl(230, 26%, 81%) 100%) fixed;
     color: hsl(0, 0%, 1%);
-    height: 80vh;
+    height: 90%;
+    min-height: 90%;
 }
 
 .char-inp{
