--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="content-Type" content="text/html; utf-8"/>
+
+        <meta name="robots" content="INDEX,FOLLOW"/>
+        <meta http-equiv="content-Language" content="de"/>
+
+        <meta name="description" content="Löst deine Wördl-Rätsel automatisch für dich, vollkommen kostenlos!"/>
+        <meta name="keywords"
+              content="WRDL, WÖRDL, Wordly Deutsch, Wordl Deutsch, Wordl Lösungen, Wordl Lösung heute, wordle lösung, wordle tool, wordle free"/>
+
+        <meta name="author" content="ixtomix"/>
+        <meta name="publisher" content="ixtomix"/>
+        <meta name="copyright" content="ixtomix"/>
+
+        <meta name="revisit-after" content="2 days"/>
+        <title>Wördlfinder</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 
         {% block stylesheets %}
@@ -10,12 +26,30 @@
         {% endblock %}
 
         {% block javascripts %}
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+                    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                    crossorigin="anonymous"></script>
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
 
     <body>
-        {% block body %}{% endblock %}
+
+        {{ include('global/navbar.html.twig') }}
+
+        <div class="container-fluid pb-5">
+            <div class="blue-inner-container container mx-auto">
+                <div class="row">
+                    <div class="col-12 p-3 m-1">
+                        {% block body %}
+
+                        {% endblock %}
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        {{ include('global/footer.html.twig') }}
+
     </body>
 </html>
