--- a/templates/global/navbar.html.twig
+++ b/templates/global/navbar.html.twig
@@ -7,13 +7,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Start</a>
+                    <a class="nav-link"  href="{{ path('home') }}">Start</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Über Wördlfinder</a>
+                    <a class="nav-link" href="{{ path('about') }}">Über Wördlfinder</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Datenschutz</a>
+                    <a class="nav-link" href="{{ path('data_protection') }}">Datenschutz</a>
                 </li>
             </ul>
         </div>
