--- a/templates/global/footer.html.twig
+++ b/templates/global/footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="footer mt-auto py-3 bg-dark fixed-bottom">
+<footer class="footer mt-auto py-3 bg-dark">
     <div class="container">
         <div class="row">
             <div class="col-4 text-center">
