--- a/templates/global/navbar.html.twig
+++ b/templates/global/navbar.html.twig
@@ -13,6 +13,9 @@
                     <a class="nav-link" href="{{ path('about') }}">Über Wördlfinder</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ path('data_science') }}">Data-Science</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ path('data_protection') }}">Datenschutz</a>
                 </li>
             </ul>
